--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -20,28 +20,28 @@
       <app-menu></app-menu>
 
       <div class="signin-signup">
-        <form action="" class="sign-in-form">
+        <!--Iniciar sesion-->
+        <form action="" class="sign-in-form" (ngSubmit)="userLogin()">
           <h2 class="title">Iniciar Sesión</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
-            <input type="text" required placeholder="Usuario" />
+            <input
+              type="text"
+              name="username"
+              [(ngModel)]="persona.username"
+              placeholder="Usuario"
+            />
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Contraseña" />
+            <input
+              type="password"
+              name="password"
+              [(ngModel)]="persona.password"
+              placeholder="Contraseña"
+            />
           </div>
-          <a href="/paginaadmin" class="btn" style="font-size: 1.5em">
-            <p
-              style="
-                color: bisque;
-                right: -1.5em;
-                position: relative;
-                top: 0.5em;
-              "
-            >
-              Acceder
-            </p>
-          </a>
+          <input type="submit" value="Acceder" class="btn" />
 
           <p class="social-text">O Iniciar Sesión con la Plataforma Social</p>
           <div class="social-media">
