--- a/src/app/componentes/paginapaciente/paginapaciente.component.html
+++ b/src/app/componentes/paginapaciente/paginapaciente.component.html
@@ -28,21 +28,9 @@
         </a>
       </li>
       <li>
-        <a href="#">
-          <i class="uil uil-thumbs-up"></i>
-          <span class="link-name">Like</span>
-        </a>
-      </li>
-      <li>
         <a href="/contactanospaciente">
           <i class="uil uil-comments"></i>
           <span class="link-name">Contactanos</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="uil uil-share"></i>
-          <span class="link-name">Share</span>
         </a>
       </li>
     </ul>
@@ -90,7 +78,7 @@
             class="content"
             style="width: 4em; right: -41em; position: relative; top: -58em"
           >
-            <h3>bienvenido a HealthTest</h3>
+            <h3>Bienvenido a HealthTest</h3>
             <p>
               <strong>¡Felicidades!</strong> Es muy bonito que estés de nuevo
               entre nosotros
