--- a/src/app/componentes/reportetestpaciente/reportetestpaciente.component.html
+++ b/src/app/componentes/reportetestpaciente/reportetestpaciente.component.html
@@ -10,9 +10,9 @@
   <div class="menu-items">
     <ul class="nav-links">
       <li>
-        <a href="#">
+        <a href="/paginapaciente">
           <i class="uil uil-estate"></i>
-          <span class="link-name">Dahsboard</span>
+          <span class="link-name">Home</span>
         </a>
       </li>
       <li>
@@ -22,27 +22,15 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="/reportetestpaciente">
           <i class="uil uil-chart"></i>
-          <span class="link-name">Analytics</span>
+          <span class="link-name">Reporte de Test</span>
         </a>
       </li>
       <li>
-        <a href="#">
-          <i class="uil uil-thumbs-up"></i>
-          <span class="link-name">Like</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
+        <a href="/contactanospaciente">
           <i class="uil uil-comments"></i>
-          <span class="link-name">Comment</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="uil uil-share"></i>
-          <span class="link-name">Share</span>
+          <span class="link-name">Contactanos</span>
         </a>
       </li>
     </ul>
@@ -51,19 +39,8 @@
       <li>
         <a href="#">
           <i class="uil uil-signout"></i>
-          <span class="link-name">Logout</span>
+          <span class="link-name">Cerrar Sesión </span>
         </a>
-      </li>
-
-      <li class="mode">
-        <a href="#">
-          <i class="uil uil-moon"></i>
-          <span class="link-name">Dark Mode</span>
-        </a>
-
-        <div class="mode-toggle">
-          <span class="switch"></span>
-        </div>
       </li>
     </ul>
   </div>
