--- a/src/app/componentes/contactanospaciente/contactanospaciente.component.html
+++ b/src/app/componentes/contactanospaciente/contactanospaciente.component.html
@@ -28,21 +28,9 @@
         </a>
       </li>
       <li>
-        <a href="#">
-          <i class="uil uil-thumbs-up"></i>
-          <span class="link-name">Like</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
+        <a href="/contactanospaciente">
           <i class="uil uil-comments"></i>
           <span class="link-name">Contactanos</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="uil uil-share"></i>
-          <span class="link-name">Share</span>
         </a>
       </li>
     </ul>
