--- a/src/app/componentes/paginapaciente/paginapaciente.component.html
+++ b/src/app/componentes/paginapaciente/paginapaciente.component.html
@@ -66,7 +66,7 @@
 
       <div class="boxes">
         <section class="home" id="home">
-          <div class="image" style="top: -8em; position: relative; right: 7em">
+          <div class="image">
             <img
               style="width: 44em"
               src="../../../assets/img/Logo3PrName.png"
@@ -74,10 +74,7 @@
             />
           </div>
 
-          <div
-            class="content"
-            style="width: 4em; right: -41em; position: relative; top: -58em"
-          >
+          <div class="content">
             <h3>Bienvenido a HealthTest</h3>
             <p>
               <strong>¡Felicidades!</strong> Es muy bonito que estés de nuevo
