--- a/src/app/componentes/menuadmin/menuadmin.component.html
+++ b/src/app/componentes/menuadmin/menuadmin.component.html
@@ -21,7 +21,7 @@
       <ul class="side-dropdown">
         <li><a href="#">Administrador</a></li>
         <li><a href="#">Psicólogo</a></li>
-        <li><a href="#">Paciente</a></li>
+        <li><a href="/mostrarpacientes">Paciente</a></li>
         <li>
           <a href="/estadisticasuser">Estadistica de Usuarios</a>
         </li>
