--- a/src/app/componentes/mostrarpacientes/mostrarpacientes.component.html
+++ b/src/app/componentes/mostrarpacientes/mostrarpacientes.component.html
@@ -53,37 +53,38 @@
       <li class="divider">/</li>
       <li><a href="#" class="active">HealthTest</a></li>
     </ul>
-    <table class="table">
-      <thead>
-        <tr class="text-center">
-          <th scope="col">ID</th>
-          <th scope="col">NOMBRES</th>
-          <th scope="col">EMAIL</th>
-          <th scope="col">CONTRASEÑA</th>
-          <th scope="col">NOMBRE USUARIO</th>
-          <th scope="col">Aciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="text-center" style="justify-content: center">
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+    <div class="data">
+      <div class="content-data">
+        <table class="table" style="font-size: 1em">
+          <thead>
+            <tr class="text-center">
+              <th scope="col">ID</th>
+              <th scope="col">NOMBRES</th>
+              <th scope="col">EMAIL</th>
+              <th scope="col">CONTRASEÑA</th>
+              <th scope="col">NOMBRE USUARIO</th>
+              <th scope="col">ACCIONES</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let persona; personas" class="text-center">
+              <td>{{ persona.id }}</td>
+              <td>{{ persona.name }}</td>
+              <td>{{ persona.email }}</td>
+              <td>{{ persona.password }}</td>
+              <td>{{ persona.username }}</td>
 
-          <td>
-            <button class="btn btn-warning">Editar</button>
-            <button
-              class="btn btn-danger"
-              style="justify-content: center; margin-left: 10px"
-            >
-              Eliminar
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+              <td>
+                <button class="btn btn-warning">Editar</button>
+                <button class="btn btn-danger" style="margin-left: 10px">
+                  Eliminar
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
     <app-footer></app-footer>
   </main>
   <!-- MAIN -->
