--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -27,7 +27,7 @@
               class="selectbox"
               style="position: relative; top: -1em; right: 7em"
             >
-              <div class="select" id="select" style="height: 0.1em">
+              <div class="select" id="select1" style="height: 0.1em">
                 <div class="contenido-select">
                   <h1 class="titulo">
                     Selecciona &nbsp; el &nbsp; tipo &nbsp;de&nbsp; usuario
@@ -36,7 +36,7 @@
                 <i class="fas fa-angle-down"></i>
               </div>
 
-              <div class="opciones" id="opciones">
+              <div class="opciones" id="opciones1">
                 <a
                   href="#"
                   class="opcion"
