--- a/src/app/componentes/menuadmin/menuadmin.component.html
+++ b/src/app/componentes/menuadmin/menuadmin.component.html
@@ -19,8 +19,8 @@
         <i class="bx bx-chevron-right icon-right"></i
       ></a>
       <ul class="side-dropdown">
-        <li><a href="#">Administrador</a></li>
-        <li><a href="#">Psicólogo</a></li>
+        <li><a href="/mostraradmin">Administrador</a></li>
+        <li><a href="/mostrarpsicologo">Psicólogo</a></li>
         <li><a href="/mostrarpacientes">Paciente</a></li>
         <li>
           <a href="/estadisticasuser">Estadistica de Usuarios</a>
