--- a/src/app/componentes/editarpacienteperfil/editarpacienteperfil.component.html
+++ b/src/app/componentes/editarpacienteperfil/editarpacienteperfil.component.html
@@ -109,7 +109,7 @@
               <a
                 class="noselect"
                 style="position: relative; right: -35em"
-                href="/mostrarpsicologo"
+                href="/paginapsicologovisualizarpaciente"
               >
                 <span class="text" style="font-size: 1.5em">Volver</span
                 ><span class="icon"
