--- a/src/app/componentes/estadisticasuser/estadisticasuser.component.html
+++ b/src/app/componentes/estadisticasuser/estadisticasuser.component.html
@@ -60,7 +60,9 @@
               style="width: 6em"
               src="https://cdn-icons-png.flaticon.com/512/998/998385.png"
             />
-            <h2>4</h2>
+            <br />
+            <br />
+            <h2>{{ contadoradmin }}</h2>
             <br />
             <h1 style="font-size: 2em">Adminitrador</h1>
           </div>
@@ -74,7 +76,9 @@
               style="width: 6em"
               src="https://cdn-icons-png.flaticon.com/512/921/921347.png"
             />
-            <h2>10</h2>
+            <br />
+            <br />
+            <h2>{{ contadorusuario }}</h2>
             <br />
             <h1 style="font-size: 2em">Paciente</h1>
           </div>
@@ -88,7 +92,8 @@
               style="width: 6em"
               src="https://cdn-icons-png.flaticon.com/512/709/709043.png"
             />
-            <h2>3</h2>
+            <br /><br />
+            <h2>{{ contadorpsicologos }}</h2>
             <br />
             <h1 style="font-size: 2em">Psicólogo</h1>
           </div>
