--- a/src/app/componentes/mostrarpacientes/mostrarpacientes.component.html
+++ b/src/app/componentes/mostrarpacientes/mostrarpacientes.component.html
@@ -49,7 +49,7 @@
   <main>
     <h1 class="title">HealthTest</h1>
     <ul class="breadcrumbs">
-      <li><a href="#">Home</a></li>
+      <li><a href="#">Mostrar Paciente</a></li>
       <li class="divider">/</li>
       <li><a href="#" class="active">HealthTest</a></li>
     </ul>
@@ -58,8 +58,7 @@
         class="btn btn-info"
         style="
           margin-left: 10px;
-          position: relative;
-          right: -50em;
+
           font-size: 1.5em;
         "
         data-bs-toggle="modal"
@@ -67,6 +66,57 @@
       >
         Agregar Paciente
       </button>
+
+      <a
+        class="download-button"
+        style="
+          margin-left: 10px;
+
+          font-size: 1.5em;
+        "
+        href="http://localhost:8080/api/v1/exportarPDF"
+      >
+        <div class="docs">
+          <svg
+            class="css-i6dzq1"
+            stroke-linejoin="round"
+            stroke-linecap="round"
+            fill="none"
+            stroke-width="2"
+            stroke="currentColor"
+            height="20"
+            width="20"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
+            ></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line y2="13" x2="8" y1="13" x1="16"></line>
+            <line y2="17" x2="8" y1="17" x1="16"></line>
+            <polyline points="10 9 9 9 8 9"></polyline>
+          </svg>
+          ReportePDF
+        </div>
+        <div class="download">
+          <svg
+            class="css-i6dzq1"
+            stroke-linejoin="round"
+            stroke-linecap="round"
+            fill="none"
+            stroke-width="2"
+            stroke="currentColor"
+            height="24"
+            width="24"
+            viewBox="0 0 24 24"
+          >
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="7 10 12 15 17 10"></polyline>
+            <line y2="3" x2="12" y1="15" x1="12"></line>
+          </svg>
+        </div>
+      </a>
+
       <a
         disabled=""
         type="button"
