--- a/src/app/componentes/estadisticasuser/estadisticasuser.component.html
+++ b/src/app/componentes/estadisticasuser/estadisticasuser.component.html
@@ -29,15 +29,17 @@
       />
       <ul class="profile-link">
         <li>
-          <a href="/perfiladmin"
+          <a href="/administrador/perfiladmin"
             ><i class="bx bxs-user-circle icon"></i>Editar Perfil</a
           >
         </li>
+
         <li>
-          <a href="#"><i class="bx bxs-cog"></i> Settings</a>
-        </li>
-        <li>
-          <a href="#"><i class="bx bxs-log-out-circle"></i>Cerrar Sesión</a>
+          <br />
+          <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+            <i class="uil uil-signout"></i>
+            <span class="link-name">Cerrar Sesión</span>
+          </button>
         </li>
       </ul>
     </div>
