--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -20,76 +20,15 @@
 
       <div class="signin-signup">
         <!--Iniciar sesion-->
-        <form action="" class="sign-in-form" (ngSubmit)="userLogin()">
+        <form action="" class="sign-in-form" (ngSubmit)="login()">
           <h2 class="title">Iniciar Sesión</h2>
-          <div class="contenedor">
-            <div
-              class="selectbox"
-              style="position: relative; top: -1em; right: 7em"
-            >
-              <div class="select" id="select1" style="height: 0.1em">
-                <div class="contenido-select">
-                  <h1 class="titulo">
-                    Selecciona &nbsp; el &nbsp; tipo &nbsp;de&nbsp; usuario
-                  </h1>
-                </div>
-                <i class="fas fa-angle-down"></i>
-              </div>
 
-              <div class="opciones" id="opciones1">
-                <a
-                  href="#"
-                  class="opcion"
-                  (click)="setTipoUsuario('Administrador')"
-                >
-                  <div class="contenido-opcion">
-                    <img
-                      src="https://cdn-icons-png.flaticon.com/512/2345/2345338.png"
-                      alt=""
-                    />
-                    <div class="textos">
-                      <h1 class="titulo">Administrador</h1>
-                      <p class="descripcion">Su cuenta sera verificada.</p>
-                    </div>
-                  </div>
-                </a>
-                <a
-                  href="#"
-                  class="opcion"
-                  (click)="setTipoUsuario('Psicologo')"
-                >
-                  <div class="contenido-opcion">
-                    <img
-                      src="https://cdn-icons-png.flaticon.com/512/3475/3475916.png"
-                      alt=""
-                    />
-                    <div class="textos">
-                      <h1 class="titulo">Psicologo</h1>
-                      <p class="descripcion">Su cuenta sera verificada.</p>
-                    </div>
-                  </div>
-                </a>
-                <a href="#" class="opcion" (click)="setTipoUsuario('Paciente')">
-                  <div class="contenido-opcion">
-                    <img
-                      src="https://cdn-icons-png.flaticon.com/512/4113/4113047.png"
-                      alt=""
-                    />
-                    <div class="textos">
-                      <h1 class="titulo">Paciente</h1>
-                      <p class="descripcion">Su cuenta no sera verificada.</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
           <div class="input-field">
             <i class="fas fa-user"></i>
             <input
               type="text"
               name="username"
-              [(ngModel)]="persona.username"
+              [(ngModel)]="personaLogin.username"
               placeholder="Usuario"
             />
           </div>
@@ -98,7 +37,7 @@
             <input
               type="password"
               name="password"
-              [(ngModel)]="persona.password"
+              [(ngModel)]="personaLogin.password"
               placeholder="Contraseña"
             />
           </div>
@@ -193,12 +132,13 @@
             </div>
           </div>
 
-          <div class="input-field">
+          <div class="input-field" for="nombre">
             <i class="fas fa-user"></i>
             <input
               type="text"
-              placeholder="Nombre Completo"
+              placeholder="Nombre Completos"
               name="nombre"
+              onkeydown="return /[a-z, ]/i.test(event.key)"
               [(ngModel)]="persona.name"
             />
           </div>
@@ -214,7 +154,7 @@
           <div class="input-field">
             <i class="fas fa-envelope"></i>
             <input
-              type="text"
+              type="email"
               name="email"
               [(ngModel)]="persona.email"
               placeholder="Email"
