--- a/src/app/componentes/menuadmin/menuadmin.component.html
+++ b/src/app/componentes/menuadmin/menuadmin.component.html
@@ -8,7 +8,7 @@
   >
   <ul class="side-menu">
     <li>
-      <a href="/paginaadmin" class="active" style="font-size: 2em"
+      <a href="/administrador/paginaadmin" class="active" style="font-size: 2em"
         ><i class="bx bxs-dashboard icon"></i> Home</a
       >
     </li>
@@ -19,16 +19,16 @@
         <i class="bx bx-chevron-right icon-right"></i
       ></a>
       <ul class="side-dropdown">
-        <li><a href="/mostraradmin">Administrador</a></li>
-        <li><a href="/mostrarpsicologo">Psicólogo</a></li>
-        <li><a href="/mostrarpacientes">Paciente</a></li>
+        <li><a href="/administrador/mostraradmin">Administrador</a></li>
+        <li><a href="/administrador/mostrarpsicologo">Psicólogo</a></li>
+        <li><a href="/administrador/mostrarpacientes">Paciente</a></li>
         <li>
-          <a href="/estadisticasuser">Estadistica de Usuarios</a>
+          <a href="/administrador/estadisticasuser">Estadistica de Usuarios</a>
         </li>
       </ul>
     </li>
     <li>
-      <a href="/perfiladmin"
+      <a href="/administrador/perfiladmin"
         ><i class="fa-solid fa-user icon"></i>Editar Perfil</a
       >
     </li>
@@ -44,21 +44,22 @@
         </li>
         <li><a href="#">Visualizar Test de Ansiedad</a></li>
         <li><a href="#">Visualizar Test de Depresión </a></li>
-        <li><a href="/estadisticatest">Estadistica de Tests</a></li>
+        <li>
+          <a href="/administrador/estadisticatest">Estadistica de Tests</a>
+        </li>
       </ul>
     </li>
     <li>
-      <a href="/contactanosadmin">
+      <a href="/administrador/contactanosadmin">
         <i class="fa-solid fa-phone-volume icon"></i>Contactanos</a
       >
     </li>
   </ul>
+
   <div class="ads">
-    <div class="wrapper">
-      <a href="#" class="btn-upgrade">cerrar sesión</a>
-      <p>
-        Become a <span>PRO</span> member and enjoy <span>All Features</span>
-      </p>
-    </div>
+    <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+      <i class="uil uil-signout"></i>
+      <span class="link-name">Cerrar Sesión</span>
+    </button>
   </div>
 </section>
