--- a/src/app/componentes/mostrarpacientes/mostrarpacientes.component.html
+++ b/src/app/componentes/mostrarpacientes/mostrarpacientes.component.html
@@ -30,15 +30,16 @@
       />
       <ul class="profile-link">
         <li>
-          <a href="/perfiladmin"
+          <a href="/administrador/perfiladmin"
             ><i class="bx bxs-user-circle icon"></i>Editar Perfil</a
           >
         </li>
         <li>
-          <a href="#"><i class="bx bxs-cog"></i> Settings</a>
-        </li>
-        <li>
-          <a href="#"><i class="bx bxs-log-out-circle"></i>Cerrar Sesión</a>
+          <br />
+          <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+            <i class="uil uil-signout"></i>
+            <span class="link-name">Cerrar Sesión</span>
+          </button>
         </li>
       </ul>
     </div>
@@ -96,7 +97,7 @@
             <line y2="17" x2="8" y1="17" x1="16"></line>
             <polyline points="10 9 9 9 8 9"></polyline>
           </svg>
-          ReportePDF
+          Reporte Paciente
         </div>
         <div class="download">
           <svg
@@ -122,7 +123,7 @@
         type="button"
         class="cargarbuttom"
         style="font-size: 2em"
-        href="/mostrarpacientes"
+        href="/administrador/mostrarpacientes"
       >
         <svg
           aria-hidden="true"
