--- a/src/app/componentes/mostrarpsicologo/mostrarpsicologo.component.html
+++ b/src/app/componentes/mostrarpsicologo/mostrarpsicologo.component.html
@@ -9,7 +9,7 @@
   >
   <ul class="side-menu">
     <li>
-      <a href="/paginaadmin" class="active" style="font-size: 2em"
+      <a href="/administrador/paginaadmin" class="active" style="font-size: 2em"
         ><i class="bx bxs-dashboard icon"></i> Home</a
       >
     </li>
@@ -20,16 +20,16 @@
         <i class="bx bx-chevron-right icon-right"></i
       ></a>
       <ul class="side-dropdown">
-        <li><a href="/mostraradmin">Administrador</a></li>
-        <li><a href="/mostrarpsicologo">Psicólogo</a></li>
-        <li><a href="/mostrarpacientes">Paciente</a></li>
+        <li><a href="/administrador/mostraradmin">Administrador</a></li>
+        <li><a href="/administrador/mostrarpsicologo">Psicólogo</a></li>
+        <li><a href="/administrador/mostrarpacientes">Paciente</a></li>
         <li>
-          <a href="/estadisticasuser">Estadistica de Usuarios</a>
+          <a href="/administrador/estadisticasuser">Estadistica de Usuarios</a>
         </li>
       </ul>
     </li>
     <li>
-      <a href="/perfiladmin"
+      <a href="/administrador/perfiladmin"
         ><i class="fa-solid fa-user icon"></i>Editar Perfil</a
       >
     </li>
@@ -45,22 +45,23 @@
         </li>
         <li><a href="#">Visualizar Test de Ansiedad</a></li>
         <li><a href="#">Visualizar Test de Depresión </a></li>
-        <li><a href="/estadisticatest">Estadistica de Tests</a></li>
+        <li>
+          <a href="/administrador/estadisticatest">Estadistica de Tests</a>
+        </li>
       </ul>
     </li>
     <li>
-      <a href="/contactanosadmin">
+      <a href="/administrador/contactanosadmin">
         <i class="fa-solid fa-phone-volume icon"></i>Contactanos</a
       >
     </li>
   </ul>
+
   <div class="ads">
-    <div class="wrapper">
-      <a href="#" class="btn-upgrade">cerrar sesión</a>
-      <p>
-        Become a <span>PRO</span> member and enjoy <span>All Features</span>
-      </p>
-    </div>
+    <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+      <i class="uil uil-signout"></i>
+      <span class="link-name">Cerrar Sesión</span>
+    </button>
   </div>
 </section>
 <!-- SIDEBAR -->
@@ -92,15 +93,17 @@
       />
       <ul class="profile-link">
         <li>
-          <a href="/perfiladmin"
+          <a href="/administrador/perfiladmin"
             ><i class="bx bxs-user-circle icon"></i>Editar Perfil</a
           >
         </li>
+
         <li>
-          <a href="#"><i class="bx bxs-cog"></i> Settings</a>
-        </li>
-        <li>
-          <a href="#"><i class="bx bxs-log-out-circle"></i>Cerrar Sesión</a>
+          <br />
+          <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+            <i class="uil uil-signout"></i>
+            <span class="link-name">Cerrar Sesión</span>
+          </button>
         </li>
       </ul>
     </div>
@@ -158,7 +161,7 @@
             <line y2="17" x2="8" y1="17" x1="16"></line>
             <polyline points="10 9 9 9 8 9"></polyline>
           </svg>
-          ReportePDF
+          Reporte Psicologo
         </div>
         <div class="download">
           <svg
@@ -184,7 +187,7 @@
         type="button"
         class="cargarbuttom"
         style="font-size: 2em"
-        href="/mostrarpsicologo"
+        href="/administrador/mostrarpsicologo"
       >
         <svg
           aria-hidden="true"
