--- a/src/app/componentes/paginaadmin/paginaadmin.component.html
+++ b/src/app/componentes/paginaadmin/paginaadmin.component.html
@@ -35,10 +35,11 @@
           >
         </li>
         <li>
-          <a href="#"><i class="bx bxs-cog"></i> Settings</a>
-        </li>
-        <li>
-          <a href="#"><i class="bx bxs-log-out-circle"></i>Cerrar Sesión</a>
+          <br />
+          <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+            <i class="uil uil-signout"></i>
+            <span class="link-name">Cerrar Sesión</span>
+          </button>
         </li>
       </ul>
     </div>
