--- a/src/app/componentes/paginapaciente/paginapaciente.component.css
+++ b/src/app/componentes/paginapaciente/paginapaciente.component.css
@@ -906,3 +906,24 @@ section:nth-child(even) {
   transition: all 300ms ease-in-out 400ms;
 }
 /*Fin del popup*/
+
+.cerrasesion {
+  background: #fbca1f;
+  font-family: inherit;
+  padding: 0.6em 1.3em;
+  font-weight: 900;
+  font-size: 18px;
+  border: 3px solid black;
+  border-radius: 0.4em;
+  box-shadow: 0.1em 0.1em;
+}
+
+.cerrasesion:hover {
+  transform: translate(-0.05em, -0.05em);
+  box-shadow: 0.15em 0.15em;
+}
+
+.cerrasesion:active {
+  transform: translate(0.05em, 0.05em);
+  box-shadow: 0.05em 0.05em;
+}
