--- a/src/app/componentes/paginapsicologovisualizarpaciente/paginapsicologovisualizarpaciente.component.html
+++ b/src/app/componentes/paginapsicologovisualizarpaciente/paginapsicologovisualizarpaciente.component.html
@@ -11,19 +11,19 @@
   </div>
   <ul class="nav-links">
     <li>
-      <a href="/paginapsicologo">
+      <a href="/psicologo/paginapsicologo">
         <i class="bx bx-grid-alt"></i>
         <span class="links_name">Home</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="/psicologo/perfilpsicologo">
         <i class="bx bx-user"></i>
         <span class="links_name">Editar Perfil</span>
       </a>
     </li>
     <li>
-      <a href="/paginapsicologovisualizarpaciente" class="active">
+      <a href="/psicologo/paginapsicologovisualizarpaciente" class="active">
         <i class="bx bx-list-ul"></i>
         <span class="links_name">Paciente</span>
       </a>
@@ -53,18 +53,18 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="/psicologo/contactanospsicologo">
         <i class="bx bx-message"></i>
         <span class="links_name">Contactanos</span>
       </a>
     </li>
-    <li class="log_out">
-      <a href="#">
-        <i class="bx bx-log-out"></i>
-        <span class="links_name">Salir</span>
-      </a>
+    <br /><br /><br /><br /><br /><br />
+    <li>
+      <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+        <i class="uil uil-signout"></i>
+        <span class="link-name">Cerrar Sesión</span>
+      </button>
     </li>
-    s
   </ul>
 </div>
 <section class="home-section">
@@ -82,7 +82,7 @@
     </div>
     <div class="profile-details">
       <!--<img src="images/profile.jpg" alt="">-->
-      <span class="admin_name">Donald Silva</span>
+      <span class="admin_name">{{ user.user.username }}</span>
     </div>
   </nav>
   <div class="home-content">
@@ -144,7 +144,7 @@
                   <line y2="17" x2="8" y1="17" x1="16"></line>
                   <polyline points="10 9 9 9 8 9"></polyline>
                 </svg>
-                ReportePDF
+                Reporte Paciente
               </div>
               <div class="download">
                 <svg
@@ -171,7 +171,7 @@
             type="button"
             class="cargarbuttom"
             style="font-size: 2em"
-            href="/paginapsicologovisualizarpaciente"
+            href="/psicologo/paginapsicologovisualizarpaciente"
           >
             <svg
               aria-hidden="true"
