--- a/src/app/componentes/perfiladmin/perfiladmin.component.css
+++ b/src/app/componentes/perfiladmin/perfiladmin.component.css
@@ -719,7 +719,7 @@ button:focus:not(:focus-visible) {
 }
 
 /*input*/
-button {
+.editarboton {
   display: flex;
   align-items: center;
   font-family: inherit;
@@ -734,20 +734,41 @@ button {
   border-radius: 16px;
 }
 
-button svg {
+.editarboton svg {
   margin-right: 3px;
   transform: rotate(30deg);
   transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
 }
 
-button span {
+.editarboton span {
   transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
 }
 
-button:hover svg {
+.editarboton:hover svg {
   transform: translateX(5px) rotate(90deg);
 }
 
-button:hover span {
+.editarboton:hover span {
   transform: translateX(7px);
+}
+
+.cerrasesion {
+  background: #fbca1f;
+  font-family: inherit;
+  padding: 0.6em 1.3em;
+  font-weight: 900;
+  font-size: 18px;
+  border: 3px solid black;
+  border-radius: 0.4em;
+  box-shadow: 0.1em 0.1em;
+}
+
+.cerrasesion:hover {
+  transform: translate(-0.05em, -0.05em);
+  box-shadow: 0.15em 0.15em;
+}
+
+.cerrasesion:active {
+  transform: translate(0.05em, 0.05em);
+  box-shadow: 0.05em 0.05em;
 }
