--- a/src/app/componentes/perfiladmin/perfiladmin.component.html
+++ b/src/app/componentes/perfiladmin/perfiladmin.component.html
@@ -9,7 +9,7 @@
   >
   <ul class="side-menu">
     <li>
-      <a href="/paginaadmin" class="active" style="font-size: 2em"
+      <a href="/administrador/paginaadmin" class="active" style="font-size: 2em"
         ><i class="bx bxs-dashboard icon"></i> Home</a
       >
     </li>
@@ -20,21 +20,22 @@
         <i class="bx bx-chevron-right icon-right"></i
       ></a>
       <ul class="side-dropdown">
-        <li><a href="#">Administrador</a></li>
-        <li><a href="#">Psicólogo</a></li>
-        <li><a href="#">Paciente</a></li>
+        <li><a href="/administrador/mostraradmin">Administrador</a></li>
+        <li><a href="/administrador/mostrarpsicologo">Psicólogo</a></li>
+        <li><a href="/administrador/mostrarpacientes">Paciente</a></li>
         <li>
-          <a href="/estadisticasuser">Estadistica de Usuarios</a>
+          <a href="/administrador/estadisticasuser">Estadistica de Usuarios</a>
         </li>
       </ul>
     </li>
     <li>
-      <a href="#"><i class="fa-solid fa-user icon"></i>Editar Perfil</a>
+      <a href="/administrador/perfiladmin"
+        ><i class="fa-solid fa-user icon"></i>Editar Perfil</a
+      >
     </li>
     <li>
       <a href="#"
-        ><i class="fa-solid fa-book-bookmark icon"></i>
-        Tests
+        ><i class="fa-solid fa-book-bookmark icon"></i> Tests
         <i class="bx bx-chevron-right icon-right"></i
       ></a>
       <ul class="side-dropdown">
@@ -44,22 +45,23 @@
         </li>
         <li><a href="#">Visualizar Test de Ansiedad</a></li>
         <li><a href="#">Visualizar Test de Depresión </a></li>
-        <li><a href="/estadisticatest">Estadistica de Tests</a></li>
+        <li>
+          <a href="/administrador/estadisticatest">Estadistica de Tests</a>
+        </li>
       </ul>
     </li>
     <li>
-      <a href="/contactanosadmin">
+      <a href="/administrador/contactanosadmin">
         <i class="fa-solid fa-phone-volume icon"></i>Contactanos</a
       >
     </li>
   </ul>
+
   <div class="ads">
-    <div class="wrapper">
-      <a href="#" class="btn-upgrade">cerrar sesión</a>
-      <p>
-        Become a <span>PRO</span> member and enjoy <span>All Features</span>
-      </p>
-    </div>
+    <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+      <i class="uil uil-signout"></i>
+      <span class="link-name">Cerrar Sesión</span>
+    </button>
   </div>
 </section>
 
@@ -92,15 +94,17 @@
       />
       <ul class="profile-link">
         <li>
-          <a href="/perfiladmin"
+          <a href="/administrador/perfiladmin"
             ><i class="bx bxs-user-circle icon"></i>Editar Perfil</a
           >
         </li>
+
         <li>
-          <a href="#"><i class="bx bxs-cog"></i> Settings</a>
-        </li>
-        <li>
-          <a href="#"><i class="bx bxs-log-out-circle"></i>Cerrar Sesión</a>
+          <br />
+          <button class="cerrasesion" type="submit" (click)="cerrarSesion()">
+            <i class="uil uil-signout"></i>
+            <span class="link-name">Cerrar Sesión</span>
+          </button>
         </li>
       </ul>
     </div>
@@ -129,63 +133,57 @@
             </div>
 
             <form id="form">
-              <label style="font-size: 2em; position: relative; right: 7em"
+              <label style="font-size: 2em; position: relative; right: 9em"
                 >Nombre Completo</label
               >
               <input
                 type="text"
-                name="from_name"
-                id="from_name"
+                name="name"
+                [(ngModel)]="user.user.name"
                 placeholder="Nombre Completo"
                 class="box"
                 required
               />
-              <label style="font-size: 2em; position: relative; right: 9.5em"
+              <label style="font-size: 2em; position: relative; right: 11.3em"
                 >Usuario</label
               >
               <input
                 type="text"
-                name="from_name"
-                id="from_name"
+                [(ngModel)]="user.user.username"
+                name="username"
                 placeholder="Usuario"
                 class="box"
                 required
               />
-              <label style="font-size: 2em; position: relative; right: 8.5em"
-                >Contraseña</label
-              >
-              <input
-                type="text"
-                name="from_name"
-                id="from_name"
-                placeholder="Contraseña"
-                class="box"
-                required
-              />
-              <label style="font-size: 2em; position: relative; right: 7.5em"
+
+              <label style="font-size: 2em; position: relative; right: 9.5em"
                 >Tipo de Usuario</label
               >
               <input
                 type="text"
-                name="from_name"
-                id="from_name"
+                name="tipousuario"
+                [disabled]="true"
+                [(ngModel)]="user.user.tipousuario"
                 placeholder="Tipo de Usuario"
                 class="box"
                 required
               />
-              <label style="font-size: 2em; position: relative; right: 7em"
-                >correo electrónico</label
+              <label style="font-size: 2em; position: relative; right: 9em"
+                >Correo Electrónico</label
               >
               <input
                 type="email"
-                name="email_id"
-                id="email_id"
+                [(ngModel)]="user.user.email"
+                name="email"
                 placeholder="Email"
                 class="box"
                 required
               />
 
-              <button>
+              <button
+                class="editarboton"
+                (click)="ActualizarPersona(user.user)"
+              >
                 <svg
                   height="24"
                   width="24"
