--- a/src/app/componentes/paginapaciente/paginapaciente.component.html
+++ b/src/app/componentes/paginapaciente/paginapaciente.component.html
@@ -50,6 +50,10 @@
   <div class="top">
     <i class="uil uil-bars sidebar-toggle"></i>
 
+    <div class="profile-details">
+      <!--<img src="images/profile.jpg" alt="">-->
+      <span class="admin_name">{{ user.user.username }}</span>
+    </div>
     <div class="search-box">
       <i class="uil uil-search"></i>
       <input type="text" placeholder="Search here..." />
